test/invalid/baseline/exception.txt
Syntax error at line 4:
exception SomeException {
^ Unrecognised tokens
